--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.androwheather'
+    namespace 'com.example.androweather'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.androwheather"
+        applicationId "com.example.androweather"
         minSdk 22
         targetSdk 34
         versionCode 1
