--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
             </intent-filter>
 
         </activity>
-
+        <service  android:name=".MainActivity"
+            android:foregroundServiceType="location">
+        </service>
     </application>
 
 </manifest>
